styles.css
body{
    font-family: Arial, Helvetica, sans-serif;
    font-size: 15px;
    line-height: 1.5;
    color:lightgrey;
    min-width: 800px;
    max-width: 1600px;  
    background-color: gray;      
}

.visualize{
    border: black 5px dashed;
}

#grad{
    background-image: linear-gradient(to bottom right,#c0ad8c, gray );
    background-repeat: no-repeat;
}

.screen-shot{
    max-height: 600px;
    padding: 25px
}

.centered{
    display: flex;
    align-items: center;
    justify-content: center;
    padding-top: 200px;
    padding-bottom: 200px;
}

a{
    text-decoration: none;
    color: lightgray;
    font-size: 16px;
}

.plain{
    list-style: none;
    padding-bottom: 25px;
}

.container{
    margin: auto;
    width: 80%;
    overflow: hidden;
}

.icon{
    height: 200px;
    border-radius: 10px;
    
}

.small-icon{
    height: 75px;
    border-radius: 10px;
}

.collapse{
    visibility: collapse;
}

/* HEADER */
header{
    background-color: rgb(48, 63, 51);
    padding: 0;
    min-height: 120px;
    border-bottom: #875d48 7px solid;
}

#name-plate{
    float: left;
}


.navigation{
    margin-left: 50%;
    padding-top: 10px;
    /* display: inline; */
}
.navigation li{
    display: inline;
    margin: 10px
}

.navigation ul{
    list-style-type: none;
    
}

.navigation :hover{
    color:rgb(126, 211, 143)
}


/* FOOTER */
footer{
    text-align: center;
    margin-top: 250px;
    background-color: gray;
    min-height: 50px;
}


/*  INDEX MAIN */
.main{
    padding: 20px 0 20px 0 ;
    /* background-color: #c0ad8c; */
    min-height: 400px;
    /* border-bottom: #c0ad8c 7px solid; */
}

#headshot{
    max-width: 60%;
    margin-left: auto;
    margin-right: auto;
    border-style: solid;
    border-radius: 10px;
    border-width: 5px;
    border-color: darkolivegreen;
}


#main-image{
    width:50%;
    float: left;
}

#main-info{
    width: 50%;
    float: right;
    color: rgb(48, 63, 51)
}

#main-info a{
    color: rgb(62, 128, 62)    
}

#main-info p::first-line{
    font-size: 20px;
    font-weight: bold;
    color:rgb(82, 149, 96)
}

#intent-statement{
    width: 400px;
}

.row{
    display: inline-flex;
    width: 75%;
    margin: 0 50px 0 50px;
    padding: 10px;
    justify-content: center;
    
}

.col{
    color: rgb(0, 41, 0);
    width: 30%;
    display: inline-flex;
    margin-left: 50px;
}

/* SKILLS */

.center-section{
    text-align: center;
}

.viz-table {
    width: 50%;
    border: black 2px solid
}

/* .project-table > td{
    width: 50%;
    border: black 2px solid
} */

